Add: flex class to form column

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="column-2 text-white text-shadow flex flex-center-y">
                 <h2><span>KNOW</span> everything you need to!</h2>
             </div>
-            <div class="column-2">
+            <div class="column-2 flex">
                 <div class="form-wrapper box-shadow">
                     <h3 class="text-center">GOT QUESTIONS?</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
