--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container flex">
             <div class="column-2 text-white text-shadow flex flex-center-y">
-                <h2><span>KNOW</span> everything you need to!</h2>
+                <h2><span>GOT</span> questions?</h2>
             </div>
             <div class="column-2 flex flex-end">
                 <div class="form-wrapper box-shadow">
