--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="column-2 flex flex-end">
                 <div class="form-wrapper box-shadow">
-                    <h3 class="text-center">GOT QUESTIONS?</h3>
+                    <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
                     <label for="lname">Your last name <span class="red-star">*</span></label>
