Add: button to contact form

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
                     <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
                     <label for="email">Your eMail address <span class="red-star">*</span></label>
                     <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
+                    <div class="button-wrapper">
+                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
+                            GET STARTED!
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
