--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <div class="container flex">
             <div class="column-2 text-white text-shadow flex flex-center-y">
                 <h2><span>GOT</span> questions?</h2>
+                <p>Feel free to contact us at any time! We will come back to you as soon as possible.</p>
             </div>
             <div class="column-2 flex flex-end">
                 <div class="form-wrapper box-shadow">
