Add: flex-center-x and flex-column to contact h2 column

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container flex">
-            <div class="column-2 text-white text-shadow flex flex-center-y">
+            <div class="column-2 text-white text-shadow flex flex-column flex-center-x">
                 <h2><span>GOT</span> questions?</h2>
                 <p>Feel free to contact us at any time! We will come back to you as soon as possible.</p>
             </div>
