--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container flex">
             <div class="column-2 text-white text-shadow flex flex-column flex-center-x">
                 <h2><span>GOT</span> questions?</h2>
-                <p>Feel free to contact us at any time! We will come back to you as soon as possible.</p>
+                <p>Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 flex flex-end">
                 <div class="form-wrapper box-shadow">
@@ -122,7 +122,7 @@
                     <label for="email">Your eMail address <span class="red-star">*</span></label>
                     <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
                     <div class="button-wrapper">
-                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/basics.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
+                        <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/response.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
                             GET STARTED!
                         </a>
                     </div>
