Add: update form button text

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
                     <div class="button-wrapper">
                         <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/response.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
-                            GET STARTED!
+                            SEND FORM
                         </a>
                     </div>
                 </div>
