Add: flex and flex-column to form-wrapper

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p>Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 flex flex-end">
-                <div class="form-wrapper box-shadow">
+                <div class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
                     <input type="text" id="fname" name="fname" aria-label="Put your first name in here" required>
