--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="container flex">
             <div class="column-2 text-white text-shadow flex flex-column flex-center-x">
                 <h2><span>GOT</span> questions?</h2>
-                <p>Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam :-)</p>
+                <p>Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
             <div class="column-2 flex flex-end">
                 <div class="form-wrapper flex flex-column box-shadow">
