Add: checkbox and text for newsletter

--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
                     <input type="text" id="lname" name="lname" aria-label="Put your last name in here" required>
                     <label for="email">Your eMail address <span class="red-star">*</span></label>
                     <input type="email" id="email" name="email" aria-label="Put your email address in here" required>
+                    <div class="legal-wrapper">
+                        <p class="legal-text">with <span class="red-star">*</span> marked fields are mandatory</p>
+                        <input type="checkbox" id="newsletter" name="newsletter">
+                        <label class="newsletter" for="newsletter">I also want the newsletter!</label>
+                    </div>
                     <div class="button-wrapper">
                         <a class="button text-white" href="https://rebellionwebdesign.github.io/fab-forever/response.html" aria-label="this links to the basics page" rel="noopener" target="_blank">
                             SEND FORM
