Add: header and footer to basics page

--- a/basics.html
+++ b/basics.html
@@ -17,6 +17,61 @@
 </head>
 
 <body>
+    <!--RESPONSIVE HEADER START-->
+    <header>
+        <nav class="headerbar">
+            <div class="headerbar__images">
+                <a href="https://rebellionwebdesign.github.io/fab-forever" aria-label="this links to the homepage"><img
+                        class="headerbar__logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever logo"></a>
+                <img class="headerbar__mobile" src="assets/img/bars-solid.svg" aria-label="this opens the mobile menu"
+                    alt="opens the mobile menu">
+            </div>
+            <div class="headerbar__nav closed">
+                <img class="headerbar__mobile--close" src="assets/img/xmark-solid.svg" alt="closes the mobile menu"
+                    aria-label="close mobile menu">
+                <ul>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/basics.html"
+                            aria-label="this links to the basics page" rel="noopener" target="_blank">BASICS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/materials.html"
+                            aria-label="this links to the materials page" rel="noopener" target="_blank">MATERIALS</a>
+                    </li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/models.html"
+                            aria-label="this links to the models page" rel="noopener" target="_blank">MODELS</a></li>
+                    <li><a href="https://rebellionwebdesign.github.io/fab-forever/help.html"
+                            aria-label="this links to the help page" rel="noopener" target="_blank">HELP</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <!--FOOTER START-->
+    <footer class="flex flex-center">
+        <div class="container container-xs flex flex-center">
+            <div class="column-2 column-2-xs">
+                <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
+                <p>An educational static website project</p>
+            </div>
+            <div class="column-2 column-2-xs flex">
+                <div class="social">
+                    <a href="https://www.instagram.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to instagram"><img class="social-icon"
+                            src="assets/img/instagram.svg" alt="the instagram logo"></a>
+                    <a href="https://www.facebook.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to facebook"><img class="social-icon"
+                            src="assets/img/square-facebook.svg" alt="the facebook logo"></a>
+                    <a href="https://www.twitter.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to twitter"><img class="social-icon"
+                            src="assets/img/square-twitter.svg" alt="the twitter logo"></a>
+                    <a href="https://www.slack.com" rel="noopener" target="_blank"
+                        aria-label="this link sends you to slack"><img class="social-icon" src="assets/img/slack.svg"
+                            alt="the slack logo"></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--FOOTER END-->
+
+
 
     <script src="assets/js/mobile-menu.js" defer></script>
 </body>
