Add: heading section for basics page

--- a/basics.html
+++ b/basics.html
@@ -44,6 +44,10 @@
         </nav>
     </header>
 
+    <section class="section-half flex flex-center background">
+
+    </section>
+
     <!--FOOTER START-->
     <footer class="flex flex-center">
         <div class="container container-xs flex flex-center">
