Add: container to heading section

--- a/basics.html
+++ b/basics.html
@@ -44,8 +44,8 @@
         </nav>
     </header>
 
-    <section class="section-half flex flex-center background">
-
+    <section class="section-half flex flex-center-y background">
+        <div class="container"></div>
     </section>
 
     <!--FOOTER START-->
