Add: heading section to basics page

--- a/basics.html
+++ b/basics.html
@@ -44,8 +44,10 @@
         </nav>
     </header>
 
-    <section class="section-half flex flex-center-y background">
-        <div class="container"></div>
+    <section class="section-half flex flex-center background">
+        <div class="container text-white text-shadow">
+            <h1><span>BASICS</span> of 3D Printing</h1>
+        </div>
     </section>
 
     <!--FOOTER START-->
