--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-xs flex flex-row flex-center-y flex-column-xs">
-            <div class="column-2 column-2-xs text-white text-shadow">
+            <div class="column-2 column-2-xs text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
             <div class="column-2 column-2-xs flex flex-end align-center-xs">
