Add: responsive classes to testimonial

--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
 
     <!--TESTIMONIAL SECTION START-->
     <section class="section-half flex flex-center">
-        <div class="container flex container-xs flex-center">
-            <div class="column-2 column-2-xs">
+        <div class="container flex container-xs flex-center flex-column-xs">
+            <div class="column-2 column-2-xs flex-order">
                 <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
-            <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card">
+            <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card flex-column">
                 <img src="assets/img/testimonial-slider-asian-dude.webp" alt="image of an asian site visitor">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
