Add: responsive styles to form and form container for xs

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container flex">
-            <div class="column-2 text-white text-shadow flex flex-column flex-center-x">
+        <div class="container container-xs flex-column-xs flex">
+            <div class="column-2 column-2-xs text-white text-shadow flex flex-column flex-center-x flex-order">
                 <h2><span>GOT</span> questions?</h2>
                 <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
-            <div class="column-2 flex flex-end">
+            <div class="column-2 column-2-xs flex flex-end">
                 <div class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
