Add: create:assign class footer text to hide text in footer

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="container container-xs flex flex-center">
             <div class="column-2 column-2-xs">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
-                <p>An educational static website project</p>
+                <p class="footer-text">An educational static website project</p>
             </div>
             <div class="column-2 column-2-xs flex">
                 <div class="social">
