--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <!--FOOTER START-->
     <footer class="flex flex-center">
         <div class="container container-xs flex flex-center container-xs--100">
-            <div class="column-2 column-2-xs">
+            <div class="column-2 column-2-xs hide">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
             </div>
