Fix: add column-2-xs back to social column

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
             </div>
-            <div class="column-2 column-2-xs--100 flex">
+            <div class="column-2 column-2-xs column-2-xs--100 flex">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
