Fix: rename classes from .class-xs to .class-mobile

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
-        <div class="container container-xs flex flex-center-y flex-column-xs">
-            <div class="column-2 column-2-xs">
+        <div class="container container-mobile flex flex-center-y flex-column-mobile">
+            <div class="column-2 column-2-mobile">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
                 <div class="button-wrapper">
@@ -58,7 +58,7 @@
                     </a>
                 </div>
             </div>
-            <div class="column-2 column-2-xs">
+            <div class="column-2 column-2-mobile">
                 <img src="assets/img/hero-section-3d-printer-illustration.svg" alt="an image of a 3d printer">
             </div>
         </div>
@@ -68,13 +68,13 @@
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-xs flex flex-row flex-center-y flex-column-xs">
-            <div class="column-2 column-2-xs text-white text-shadow flex-order">
+        <div class="container container-mobile flex flex-row flex-center-y flex-column-mobile">
+            <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
-            <div class="column-2 column-2-xs flex flex-end align-center-xs">
+            <div class="column-2 column-2-mobile flex flex-end align-center-mobile">
                 <div class="grid-wrapper">
-                    <div class="grid grid-container grid-container-xs">
+                    <div class="grid grid-container grid-container-mobile">
                         <div class="grid-card grid-card__background--basics box-shadow"><h3>BASICS</h3></div>
                         <div class="grid-card grid-card__background--models box-shadow"><h3>MODELS</h3></div>
                         <div class="grid-card grid-card__background--materials box-shadow"><h3>MATERIALS</h3></div>
@@ -89,11 +89,11 @@
 
     <!--TESTIMONIAL SECTION START-->
     <section class="section-half flex flex-center">
-        <div class="container flex container-xs flex-center flex-column-xs">
-            <div class="column-2 column-2-xs flex-order">
+        <div class="container flex container-mobile flex-center flex-column-mobile">
+            <div class="column-2 column-2-mobile flex-order">
                 <h2 class="text-shadow"><span>HOW</span> we help people</h2>
             </div>
-            <div class="column-2 column-2-xs flex flex-center box-shadow rounded testimonial-card flex-column">
+            <div class="column-2 column-2-mobile flex flex-center box-shadow rounded testimonial-card flex-column">
                 <img src="assets/img/testimonial-slider-asian-dude.webp" alt="image of an asian site visitor">
                 <div>
                     <p class="testimonial-text">"Jeez. This got me up and running for a job interview!"</p>
@@ -107,12 +107,12 @@
     <!--CONTACT SECTION START-->
     <section class="section-full background flex flex-center flex-column divider-space">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-xs flex-column-xs flex">
-            <div class="column-2 column-2-xs text-white text-shadow flex flex-column flex-center-x flex-order">
+        <div class="container container-mobile flex-column-mobile flex">
+            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center-x flex-order">
                 <h2><span>GOT</span> questions?</h2>
                 <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
-            <div class="column-2 column-2-xs flex flex-end">
+            <div class="column-2 column-2-mobile flex flex-end">
                 <div class="form-wrapper flex flex-column box-shadow">
                     <h3 class="text-center">Lets stay in contact!</h3>
                     <label for="fname">Your first name <span class="red-star">*</span></label>
@@ -140,12 +140,12 @@
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
-        <div class="container container-xs flex flex-center container-xs--100">
-            <div class="column-2 column-2-xs hide">
+        <div class="container container-mobile flex flex-center container-mobile--100">
+            <div class="column-2 column-2-mobile hide">
                 <img class="footer-logo" src="assets/img/fab-forever-logo.svg" alt="the fab forever footer logo">
                 <p class="footer-text">An educational static website project</p>
             </div>
-            <div class="column-2 column-2-xs column-2-xs--100 flex">
+            <div class="column-2 column-2-mobile column-2-mobile--100 flex">
                 <div class="social">
                     <a href="https://www.instagram.com" rel="noopener" target="_blank"
                         aria-label="this link sends you to instagram"><img class="social-icon"
