--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.svg">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/media.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
