Fix class flex-center-y to flex-center--y

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!--HERO SECTION START-->
     <section class="section-full background-mask flex flex-center">
-        <div class="container container-mobile flex flex-center-y flex-column-mobile">
+        <div class="container container-mobile flex flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile">
                 <h1><span>NEW</span> to 3D Printing?</h1>
                 <p>Bring your ideas to life with our comprehensive roundup!</p>
@@ -65,7 +65,7 @@
     <!--ABOUT SECTION START-->
     <section class="section-full background-reverse flex flex-center flex-column divider-space">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
-        <div class="container container-mobile flex flex-row flex-center-y flex-column-mobile">
+        <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
                 <h2><span>3D</span>Printing resources for you!</h2>
             </div>
