Change class name from divider-space to flex-between

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!--HERO SECTION END-->
 
     <!--ABOUT SECTION START-->
-    <section class="section-full background-reverse flex flex-center flex-column divider-space">
+    <section class="section-full background-reverse flex flex-center flex-column flex-between">
         <img class="flip-x" src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex flex-row flex-center--y flex-column-mobile">
             <div class="column-2 column-2-mobile text-white text-shadow flex-order">
@@ -102,7 +102,7 @@
     <!--TESTIMONIAL SECTION END-->
 
     <!--CONTACT SECTION START-->
-    <section class="section-full background flex flex-center flex-column divider-space">
+    <section class="section-full background flex flex-center flex-column flex-between">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex-column-mobile flex">
             <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center-x flex-order">
