--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <section class="section-full background flex flex-center flex-column flex-between">
         <img src="assets/img/shape-divider-top.svg" alt="the top shape divider">
         <div class="container container-mobile flex-column-mobile flex">
-            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center-x flex-order">
+            <div class="column-2 column-2-mobile text-white text-shadow flex flex-column flex-center--x flex-order">
                 <h2><span>GOT</span> questions?</h2>
                 <p class="column-2__text">Feel free to contact us at any time! We will come back to you as soon as possible. By the way: by filling out the form you can also see how de don´t send spam!</p>
             </div>
