--- a/basics.html
+++ b/basics.html
@@ -44,11 +44,24 @@
         </nav>
     </header>
 
+    <!--HEADER SECTION START-->
     <section class="section-half flex flex-center background">
         <div class="container text-white text-shadow">
-            <h1><span>BASICS</span> of 3D Printing</h1>
+            <h2><span>BASICS</span> of 3D Printing</h2>
         </div>
     </section>
+
+    <!--CONTENT SECTION START-->
+    <section class="section-full flex">
+    <div class="container">
+        <img class="printhead" src="assets/img/victor-sutty-dO7gOTpNSlg-unsplash.jpg">
+        <article>
+            <h2><span>WHAT is 3D Printing?</span></h2>
+            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </article>
+    </div>
+    </section>
+    
 
     <!--FOOTER START-->
     <footer class="flex flex-center">
