Add flex-center class to basics section

--- a/basics.html
+++ b/basics.html
@@ -52,7 +52,7 @@
     </section>
 
     <!--CONTENT SECTION START-->
-    <section class="section-full flex">
+    <section class="section-full flex flex-center">
     <div class="container">
         <img class="printhead" src="assets/img/victor-sutty-dO7gOTpNSlg-unsplash.jpg">
         <article>
