Add correct image src and alt text

--- a/basics.html
+++ b/basics.html
@@ -54,7 +54,7 @@
     <!--CONTENT SECTION START-->
     <section class="section-full flex flex-center">
     <div class="container">
-        <img class="printhead" src="assets/img/victor-sutty-dO7gOTpNSlg-unsplash.jpg">
+        <img class="printhead" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
         <article>
             <h2><span>WHAT is 3D Printing?</span></h2>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
