Fix link to css file

--- a/basics.html
+++ b/basics.html
@@ -10,10 +10,7 @@
     <meta name="author" content="Daniel Stauffer">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>FAB FOREVER | Your 3D printing roundup resource!</title>
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/media.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/fonts.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/responsive-header.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -56,7 +53,7 @@
     <div class="container">
         <main>
             <img class="printhead rounded" src="assets/img/fab-forever-printhead.webp" alt="this should be a printhead">
-            <article>
+            <article class="margin-top margin-bottom">
                 <h2><span>WHAT </span>is 3D Printing?</h2>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
             </article>
